--- a/BookStore/BookStore.API/Properties/launchSettings.json
+++ b/BookStore/BookStore.API/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7792",
-      "sslPort": 44310
+      "applicationUrl": "http://localhost:4605",
+      "sslPort": 44305
     }
   },
   "profiles": {
-    "BookStoreAPI": {
+    "BookStore.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7031;http://localhost:5031",
+      "applicationUrl": "https://localhost:7016;http://localhost:5016",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
