--- a/BookStore/BookStore.API/appsettings.json
+++ b/BookStore/BookStore.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookStore": "Host=localhost;Username=postgres;Password=12345;Database=BookStore"
+  }
 }
