--- a/BookStore/BookStore.Models/BookStore.Models.csproj
+++ b/BookStore/BookStore.Models/BookStore.Models.csproj
@@ -1,20 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookStore.Models\BookStore.Models.csproj" />
-    <ProjectReference Include="..\BookStore.Repository\BookStore.Repository.csproj" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
