--- a/BookStore/BookStore.API/appsettings.json
+++ b/BookStore/BookStore.API/appsettings.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BookStore": "Host=localhost;Username=postgres;Password=12345;Database=BookStore"
+  "BookStorePostgreSqlConnectionString": {
+    "BookStoreApplicationDB": "Host=localhost;Port=5432;Database=BookStore;User Id=postgres;Password=12345;"
   }
 }
